# aloud

./: .gitignore  README.md  pyproject.toml
extras/claude-skill/: SKILL.md
src/aloud/: __init__.py  __main__.py  cli.py  config.py  feed.py  player.py  publish.py  tts.py
tests/: test_cli.py  test_config.py  test_feed.py  test_player.py  test_publish.py  test_tts.py
