[project]
name = "aloud"
version = "0.1.1"
description = "Text-to-speech CLI with podcast feed publishing."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Xuefei Wang" },
]
keywords = ["tts", "text-to-speech", "edge-tts", "podcast", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "edge-tts>=6.1",
]

[project.urls]
Homepage = "https://github.com/xuefei-wang/aloud"
Repository = "https://github.com/xuefei-wang/aloud"
Issues = "https://github.com/xuefei-wang/aloud/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
aloud = "aloud.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aloud"]

[tool.pytest.ini_options]
pythonpath = ["src"]
